diesel_compile_tests/tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.stderr
error[E0277]: the trait bound `str: diesel::Expression` is not satisfied
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:15:22
   |
15 |     let pred = id.eq("string");
   |                   -- ^^^^^^^^ the trait `diesel::Expression` is not implemented for `str`
   |                   |
   |                   required by a bound introduced by this call
   |
   = help: the following other types implement trait `diesel::Expression`:
             &'a T
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and 123 others
   = note: required because of the requirements on the impl of `diesel::Expression` for `&str`
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Integer>` for `&str`

error[E0271]: type mismatch resolving `<columns::name as diesel::Expression>::SqlType == diesel::sql_types::Integer`
  --> tests/fail/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs:16:22
   |
16 |     let pred = id.eq(name);
   |                   -- ^^^^ expected struct `diesel::sql_types::Text`, found struct `diesel::sql_types::Integer`
   |                   |
   |                   required by a bound introduced by this call
   |
   = note: required because of the requirements on the impl of `AsExpression<diesel::sql_types::Integer>` for `columns::name`
